# tukss2021-project4-intro

./: .gitignore  README.md  package-lock.json  payment.bpmn  pyproject.toml  worker.js
bitcoin-analysis/: approve.dmn  notes.md  package.json
calc-amount-worker/: package.json
charge-card-worker/: package-lock.json  package.json  payment.bpmn
charge-card-worker/src/: worker.js
closing-time/: ClosingTimeDiagramm.bpmn  camunda_notes.md
closing-time/calc-amount-worker/: package-lock.json  worker.js
fabian/: analyze.bpmn  approve.dmn  notes.md  worker.js  worker.py
order-fulfillment/: fulfillment.bpmn  giftdecision.dmn  readme.md  worker.js
temperature-reminder/: README.md  approve-payment.dmn  package-lock.json  package.json  temperature-reminder.bpmn
temperature-reminder/src/: worker.js
