[tool.poetry]
name = "tukss2021-project4-intro"
version = "0.1.0"
description = ""
authors = ["fabianhe <39628987+fabianhe@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
isort = "^5.8.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
